--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,32 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap');
 
 *, *::after, *::before {
   box-sizing: border-box;
+  font-family: "Jost";
+  font-size: 18px;
+  color: white;
 }
 
 body {
   margin: 0;
+  position: relative;
+  z-index: 1;
+  background: rgb(55, 58, 82);
+  background: linear-gradient(rgb(55, 58, 82) 0%, rgb(28, 31, 49) 100%);
 }
 
 main {
-  margin-inline: 22vw 15vw;
-  margin-bottom: 200px;
+  margin-inline: 25vw 15vw;
+  padding-block: 50px 200px;
 }
 
 section {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
+}
+
+h1, h2, h3, h4 {
+  font-family: "Geologica";
 }
 
 h1 {
@@ -23,17 +35,18 @@ h1 {
 }
 
 h2 {
-  margin-block: 0 30px;
-  font-size: 36px;
+  margin-block: 0 20px;
+  font-size: 34px;
 }
 
 h3 {
   margin-block: 0;
   font-size: 20px;
+  color: black;
 }
 
 h4 {
-  margin-block: 0 20px;
+  margin-block: 0 30px;
   font-size: 24px;
 }
 
@@ -55,9 +68,10 @@ p {
 
 .btn {
   padding: 15px 30px;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 10px;
   background-color: transparent;
+  transition: background-color, 0.5s;
 }
 
 .icon {
@@ -69,4 +83,42 @@ p {
   align-items: center;
   height: fit-content;
   gap: 25px;
+}
+
+.socials__item {
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+
+.socials__icon {
+  height: 100%;
+  aspect-ratio: 1 / 1;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(93%) 
+    saturate(0%) hue-rotate(185deg) brightness(106%) contrast(106%);
+}
+
+.socials__bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-radius: 50%;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+}
+
+@media (hover: hover) {
+  .btn:hover {
+    background-color: rgb(30, 32, 53);
+  }
+
+  .socials__item:hover .socials__bg {
+    transform: scale(2);
+    opacity: 1;
+  }
 }
