--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ main {
 
 section {
   margin-bottom: 50px;
+  animation: appear 1s ease-in-out;
 }
 
 h1, h2, h3, h4 {
@@ -114,6 +115,15 @@ p {
   background-color: rgba(0, 0, 0, 0.5);
   transition-duration: 0.5s;
   transition-timing-function: ease;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media (hover: hover) {
