--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -7,6 +7,11 @@
   width: 50%;
 }
 
+.hello {
+  cursor: pointer;
+  width: fit-content;
+}
+
 .hello__msg {
   font-family: "Geologica";
   font-weight: 200;
@@ -17,10 +22,45 @@
   align-items: center;
 }
 
+.title_site {
+  display: flex;
+  gap: 15px;
+}
+
+/* .title_site::after {
+  content: url(src/assets/images/sparkle.svg);
+  width: 70px;
+  transform: scale(1);
+  transition: var(--transition);
+} */
+
 .socials_header::before {
   content: "";
   height: 2px;
   width: 70px;
   background-color: var(--text-color);
   transition: var(--transition);
+}
+
+@keyframes sparkle {
+  from {
+    transform: scale(1);
+    filter: none;
+  }
+  50% {
+    transform: scale(1.3);
+    filter: brightness(1.2);
+  }
+  to {
+    transform: scale(1);
+    filter: none;
+  }
+}
+
+@media (hover: hover) {
+  .hello:hover .title_site::after {
+    animation: sparkle 1.5s ease-in infinite;
+    filter: brightness(1.2);
+    transform-origin: left center;
+  }
 }
