--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -1,10 +1,10 @@
-.works {
+.works__wrapper {
   display: flex;
   align-items: center;
   position: relative;
 }
 
-.works::before {
+.works__wrapper::before {
   content: url(src/assets/images/pencil.svg);
   width: 90px;
   position: absolute;
@@ -66,7 +66,7 @@
   height: 100vh;
   padding: 50px;
   z-index: 999;
-  transition: opacity 1s ease-in-out;
+  transition: opacity 2s ease-in-out;
 }
 
 .content_visible {
