--- a/src/components/stack/stack.css
+++ b/src/components/stack/stack.css
@@ -3,3 +3,18 @@
   flex-wrap: wrap;
   gap: 30px;
 }
+
+.stack__item {
+  padding: 3px;
+  background-color: var(--btn-color);
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.stack__btn {
+  display: block;
+  padding: 7px 17px;
+  border: 2px solid var(--btn-bd-color);
+  border-radius: 10px;
+}
