--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -1,12 +1,3 @@
-.char__desc {
-  display: flex;
-  gap: 30px;
-}
-
-.char__text {
-  width: 50%;
-}
-
 .hello {
   cursor: pointer;
   width: fit-content;
@@ -24,12 +15,10 @@
 
 .title_site {
   display: flex;
-  gap: 20px;
 }
 
 .title_site::after {
   content: url(src/assets/images/sparkle.svg);
-  width: 70px;
   transform: scale(1);
   transition: var(--transition);
 }
@@ -62,5 +51,39 @@
     animation: sparkle 1.5s ease-in infinite;
     filter: brightness(1.2);
     transform-origin: left center;
+  }
+}
+
+@media (min-width: 1200px) {
+  .title_site {
+    gap: 20px;
+  }
+
+  .title_site::after {
+    width: 70px;
+  }
+
+  .char__desc {
+    display: flex;
+    gap: 30px;
+  }
+
+  .char__text {
+    width: 50%;
+  }
+}
+
+@media (max-width: 480px) {
+  .title_site {
+    gap: 12px;
+  }
+
+  .title_site::after {
+    width: 45px;
+  }
+
+  .char__text {
+    width: 100%;
+    margin-bottom: 26px;
   }
 }
