--- a/src/components/ui/footer/footer.css
+++ b/src/components/ui/footer/footer.css
@@ -1,6 +1,4 @@
 footer {
-  padding-inline: 25vw 50px;
-  padding-block: 60px;
   background-color: var(--footer-color);
   color: white;
   display: flex;
@@ -17,4 +15,30 @@ footer {
   align-self: end;
   opacity: 0.3;
   font-size: 14px;
+}
+
+@media (min-width: 1200px) {
+  footer {
+    padding-inline: 25vw 50px;
+    padding-block: 60px;
+  }
+}
+
+@media (max-width: 480px) {
+  footer {
+    padding-inline: 5vw;
+    padding-block: 25px;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .contacts__content {
+    align-items: center;
+  }
+
+  .copyright {
+    width: 100%;
+    text-align: center;
+  }
 }
