--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -5,13 +5,11 @@
 .work__list {
   display: flex;
   gap: 30px;
-  overflow: visible;
 }
 
 .card__wrapper {
   position: relative;
   height: 360px;
-  width: 300px;
 }
 
 .card {
@@ -67,9 +65,38 @@
   color: rgb(32, 32, 32);
 }
 
+.content .btn {
+  border: 2px solid rgb(32, 32, 32);
+}
+
 @media (hover: hover) {
+  .btn_content:hover {
+    background-color: rgb(253, 224, 186);
+  }
+
   .card_closed:hover {
     transform: translateY(-10px);
     box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.3);
+  }
+}
+
+@media (min-width: 1200px) {
+  .work__list {
+    overflow: visible;
+  }
+
+  .card__wrapper {
+    height: 360px;
+    width: 300px;
+  }
+}
+
+@media (max-width: 480px) {
+  .work__list {
+    flex-direction: column;
+  }
+
+  .card__wrapper {
+    width: 100%;
   }
 }
