--- a/src/components/ui/header/header.css
+++ b/src/components/ui/header/header.css
@@ -1,10 +1,5 @@
 header {
-  position: absolute;
-  top: 0;
-  right: 0;
   width: 100%;
-  padding-inline: 25vw 50px;
-  padding-top: 50px;
   display: flex;
   align-items: center;
   justify-content: end;
@@ -21,8 +16,6 @@ header {
 .icon_moon, .icon_sun{
   display: block;
   position: relative;
-  width: 40px;
-  height: 40px;
   fill: var(--text-color);
   transition: var(--transition);
   z-index: 2;
@@ -66,5 +59,33 @@ header {
 
   .cv-download:hover .cv__highlight {
     transform: scaleX(1.1) scaleY(1.3);
+  }
+}
+
+@media (min-width: 1200px) {
+  header {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-inline: 25vw 50px;
+    padding-top: 50px;
+  }
+
+  .icon_moon, .icon_sun{
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  header {
+    padding-inline: 5vw;
+    padding-block: 25px;
+    border-bottom: 1px solid var(--text-color);
+  }
+
+  .icon_moon, .icon_sun{
+    width: 35px;
+    height: 35px;
   }
 }
