--- a/src/components/ui/header/header.css
+++ b/src/components/ui/header/header.css
@@ -4,6 +4,8 @@ header {
   align-items: center;
   justify-content: end;
   gap: 30px;
+  top: 0;
+  right: 0;
   animation: appear 1s ease-in-out;
 }
 
@@ -19,6 +21,8 @@ header {
   fill: var(--text-color);
   transition: var(--transition);
   z-index: 2;
+  width: 40px;
+  height: 40px;
 }
 
 .cv__highlight {
@@ -65,19 +69,20 @@ header {
 @media (min-width: 1200px) {
   header {
     position: absolute;
-    top: 0;
-    right: 0;
     padding-inline: 25vw 50px;
     padding-top: 50px;
   }
+}
 
-  .icon_moon, .icon_sun{
-    width: 40px;
-    height: 40px;
+@media (min-width: 721px) and (max-width: 1200px) {
+  header {
+    position: absolute;
+    padding-inline: 7vw;
+    padding-top: 30px;
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 720px) {
   header {
     padding-inline: 5vw;
     padding-block: 25px;
