--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -91,7 +91,17 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (min-width: 721px) and (max-width: 1200px) {
+  .work__list {
+    flex-direction: row;
+  }
+  
+  .card__wrapper {
+    width: 33%;
+  }
+}
+
+@media (max-width: 720px) {
   .work__list {
     flex-direction: column;
   }
