--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -13,6 +13,7 @@
 }
 
 .card {
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
@@ -30,7 +31,9 @@
   transition: 0.5s ease;
   transform: translateX(0px) translateY(0px);
   z-index: 3;
-  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .card_open {
@@ -38,6 +41,7 @@
   height: 150vh;
   border-radius: 0px;
   position: absolute;
+  background-size: 0 0;
   z-index: 900;
 }
 
@@ -45,28 +49,71 @@
   display: none;
 }
 
-.content {
+.content__wrapper {
   opacity: 0;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 50px;
+  padding: 150px;
   z-index: 999;
-  transition: opacity 2s ease-in-out;
+  transition: opacity 1s ease-in-out;
 }
 
 .content_visible {
   opacity: 1;
 }
 
-.content p, .content .btn {
+.content__wrapper {
   color: rgb(32, 32, 32);
 }
 
-.content .btn {
-  border: 2px solid rgb(32, 32, 32);
+.btn_content {
+  display: block;
+  color: rgb(32, 32, 32);
+  border: 2px solid rgb(32, 32, 32); 
+  line-height: 1;
+  width: 40px;
+  aspect-ratio: 1 / 1;
+  border-radius: 50%;
+}
+
+.content {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.content__main {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  gap: 70px;
+}
+
+.content__text {
+  width: 60%;
+}
+
+/* поместить напротив описания или заголовка, не в углу */
+.content__stack {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-align: end;
+  width: 30%;
+}
+
+.content__screenshots {
+  display: grid;
+  grid-template-columns: repeat(3, 360px);
+  gap: 20px;
+}
+
+.screenshot {
+  width: 100%;
 }
 
 @media (hover: hover) {
