--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,10 @@ p {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 .title_section {
   display: flex;
   align-items: center;
@@ -83,10 +87,14 @@ p {
 .btn {
   transition: background-color, 0.5s;
   font-weight: 500;
+  display: block;
 }
 
 .btn_standart {
   border-radius: 10px;
+}
+
+.btn_themed {
   color: var(--text-color);
   border: 2.5px solid var(--text-color);
 }
