proper texts, added noise to cards, adjusted gradients

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,6 @@ h2 {
 h3 {
   margin-block: 0;
   font-size: 20px;
-  color: rgb(32, 32, 32);
   user-select: none;
 }
 
@@ -131,10 +130,7 @@ a {
 
 .highlight, .cv__highlight {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
   margin: auto;
   opacity: 0;
   background-color: var(--accent-color);
