--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -17,6 +17,10 @@
   display: flex;
 }
 
+.char__desc p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .title_site::after {
   content: url(src/assets/images/sparkle.svg);
   transform: scale(1);
@@ -48,7 +52,7 @@
 
 @media (hover: hover) {
   .hello:hover .title_site::after {
-    animation: sparkle 1.5s ease-in infinite;
+    animation: sparkle 2s ease-in infinite;
     filter: brightness(1.2);
     transform-origin: left center;
   }
