--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -2,6 +2,16 @@
   content: "📁";
 }
 
+.light {
+  --content-color: rgb(32, 32, 32);
+  --tech-border: none;
+}
+
+.dark {
+  --content-color: white;
+  --tech-border: 2px solid rgba(255, 255, 255, 0.2);
+}
+
 .work__list {
   display: flex;
   gap: 30px;
@@ -14,10 +24,7 @@
 
 .card {
   position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  inset: 0;
   flex-shrink: 0;
   height: 100%;
   width: 100%;
@@ -35,6 +42,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.title_work {
+  color: var(--content-color);
 }
 
 .card_open {
@@ -56,16 +67,30 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 999;
+  z-index: 998;
   overflow-y: scroll;
   transition: opacity 1s ease-in-out;
-  color: var(--auto-text-color);
+  color: var(--content-color);
+}
+
+.content__wrapper::before {
+  content: "";
+  background-image: url(src/assets/images/noise.png);
+  position: absolute;
+  inset: 0;
+  opacity: 0.1;
+  z-index: 998;
+  background-repeat: repeat;
+}
+
+.btn_content, .btn_work {
+  position: relative;
+  color: var(--content-color);
+  z-index: 999;
 }
 
 .btn_content {
-  display: block;
-  color: var(--auto-text-color);
-  border: 2px solid rgb(32, 32, 32); 
+  border: 2px solid var(--content-color);
   line-height: 1;
   width: 40px;
   aspect-ratio: 1 / 1;
@@ -73,8 +98,7 @@
 }
 
 .btn_work {
-  color: var(--auto-text-color);
-  border: 2.5px solid var(--auto-text-color);
+  border: 2.5px solid var(--content-color);
 }
 
 .content {
@@ -85,6 +109,10 @@
 .content__main {
   display: flex;
   flex-direction: column;
+}
+
+.content__desc p:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 .content__slider {
@@ -127,11 +155,13 @@
 
 .title_stack {
   margin-bottom: 15px;
+  color: var(--content-color);
 }
 
 .tech {
   background-color: rgba(0, 0, 0, 0.1);
-  padding: 5px 10px;
+  border: var(--tech-border);
+  padding: 5px 15px;
   border-radius: 10px;
   cursor: default;
   text-align: center;
@@ -178,7 +208,16 @@
   }
 
   .content__showcase {
-    mask-image: linear-gradient(90deg, transparent 10%, rgba(255, 255, 255, 0.35) 70%);
+    mask-image: linear-gradient(
+      90deg, 
+      transparent 5%, 
+      rgba(255, 255, 255, 0.2) 10%,
+      rgba(255, 255, 255, 0.3) 20%,
+      rgba(255, 255, 255, 0.4) 30%,
+      rgba(255, 255, 255, 0.5) 40%,
+      rgba(255, 255, 255, 0.6) 50%,
+      rgba(255, 255, 255, 0.8) 80%
+    );
   }
 }
 
@@ -189,7 +228,11 @@
   }
 
   .content__showcase {
-    mask-image: radial-gradient(ellipse at right top, rgba(255, 255, 255, 0.2) 50%, transparent 70%);
+    mask-image: radial-gradient(
+      ellipse at right top, 
+      rgba(255, 255, 255, 0.2) 40%, 
+      transparent 70%
+    );
   }
 }
 
