--- a/src/variables.css
+++ b/src/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --bg-gradient: linear-gradient(27deg, rgba(255,228,209) 0%, rgba(255,241,223) 82%);
+  --bg-gradient: linear-gradient(27deg, rgb(255, 235, 221) 0%, rgb(253, 242, 228) 82%);
   --text-color: rgb(32, 32, 32);
   --accent-color: rgb(224, 163, 83);
   --footer-color: rgb(54, 46, 48);
