--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,6 @@ main {
 section {
   margin-bottom: 45px;
   transition: var(--transition);
-  animation: appear 1s ease-in-out;
 }
 
 h1, h2, h3, h4 {
@@ -37,7 +36,7 @@ h1 {
 }
 
 h2 {
-  margin-block: 0 20px;
+  margin-block: 0 24px;
 }
 
 h3 {
@@ -63,6 +62,10 @@ p {
 
 a {
   text-decoration: none;
+}
+
+.title:not(.title_content, .title_stack) {
+  animation: var(--animation-appear);
 }
 
 .title_section {
@@ -104,9 +107,7 @@ a {
 
 .socials {
   display: flex;
-  align-items: center;
   height: fit-content;
-  gap: 25px;
 }
 
 .socials__item {
@@ -142,8 +143,26 @@ a {
   border-radius: 50%;
 }
 
+@keyframes jump {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  80% {
+    opacity: 1;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @keyframes appear {
   from {
+    opacity: 0;
+  }
+  30% {
     opacity: 0;
   }
   to {
@@ -173,7 +192,7 @@ a {
   }
   
   h2 {
-    font-size: 34px;
+    font-size: 28px;
   }
 
   .btn_standart {
@@ -196,7 +215,7 @@ a {
   }
   
   h2 {
-    font-size: 34px;
+    font-size: 24px;
   }
 
   .btn_standart {
