--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,19 @@ a {
   border-radius: 50%;
 }
 
+.scroll-up {
+  position: fixed;
+  bottom: 80px;
+  right: 80px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: white;
+  border: none;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
 @keyframes jump {
   from {
     opacity: 0;
