--- a/src/App.css
+++ b/src/App.css
@@ -145,8 +145,6 @@ a {
 
 .scroll-up {
   position: fixed;
-  bottom: 80px;
-  right: 80px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -211,6 +209,11 @@ a {
   .btn_standart {
     padding: 15px 30px;
   }
+
+  .scroll-up {
+    bottom: 80px;
+    right: 80px;
+  }
 }
 
 @media (min-width: 721px) and (max-width: 1200px) {
@@ -234,6 +237,11 @@ a {
   .btn_standart {
     padding: 10px 25px;
   }
+
+  .scroll-up {
+    bottom: 60px;
+    right: 60px;
+  }
 }
 
 @media (max-width: 720px) {
@@ -256,5 +264,10 @@ a {
 
   .btn_standart {
     padding: 10px 20px;
+  }
+
+  .scroll-up {
+    bottom: 40px;
+    right: 40px;
   }
 }
